# Indicglyph_

./: .env.example  .gitignore  .replit  CODEBASE_DEEP_RISKS.md  CODEBASE_MAP.md  CODEBASE_UI_MAP.md  DJANGO_MIGRATION_SUMMARY.md  FINAL_MIGRATION_CHECK.md  MIGRATION_COMPLETE.md  MIGRATION_READY.md  MIGRATION_VERIFICATION.md  PUSH_TO_NEW_REPO.md  README.md  dataset_schema.json  docker-compose.yml  harvest_log_dashboard.md  pyproject.toml  scraper_core_goals.md
backend/: Dockerfile  cleanup_data.py  migrate_roles.py  requirements.txt  seed_data.py  seed_super_operator.py
backend/app/: config.py  db_adapter.py  main.py
backend/scripts/: migrate_payout_balance.py
backend/tests/: test_analytics.py
dj_backend/: Dockerfile  README.md  manage.py  requirements.txt
dj_backend/admin_console/: analytics_urls.py  analytics_views.py  bulk_upload_views.py  health_urls.py  health_views.py  homepage_urls.py  homepage_views.py  permissions.py  urls.py  views.py
dj_backend/datasets/: admin.py  models.py  serializers.py  urls.py  views.py
dj_backend/indic_backend/: asgi.py  settings.py  urls.py  wsgi.py
dj_backend/reviews/: admin.py  models.py  (+4 more)
docs/: ADMIN_PLAYBOOK.md  API.md  ARCHITECTURE.md  DARK_THEME_CONTRAST_AUDIT.md  DATASET_TYPES_GUIDE.md  LANDING_PAGE_REFACTOR_PREVIEW.md  OCR_INGESTION_GUIDE.md  README.md  SYSTEM_CONFIG_GUIDE.md  THEME_AUDIT_MINDSET.md  THEME_CHECK_ORIGINAL_VISION.md  THEME_CONSISTENCY_ANALYSIS.md  THEME_USAGE.md  UI_CONSISTENCY_AUDIT.md  unified_platform_plan.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
(+144 files in other folders)
